--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.199",
+    "@types/object-assign-deep": "^0.4.1",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
+    "object-assign-deep": "^0.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
